Falta validacion Form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="navbar-brand" href="./page/shop.html">
                     Tienda
                 </a>
-                <a class="navbar-brand" href="./page/contacto.html">
+                <a class="navbar-brand" href="#contacto">
                     Contacto
                 </a>
             </div>
@@ -71,8 +71,8 @@
                 <p>Por favor, contáctenos para cualquier pregunta o comentario. Estamos aquí para ayudarte.</p>
             </div>
 
-            <div class="col-md-6">
-                <section class="form">
+            <div id="contacto" class="col-md-6">
+                <section class="formulario">
                     <form action="">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nombre:</label>
@@ -101,8 +101,7 @@
             <h6>Mapa de Navegacion</h6>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Perfil</a></li>
+                <li><a href="./page/shop.html">Tienda</a></li>
             </ul>
         </div>
         <div class="social">
